# crack-c

./: ASCII VALUE.c  CMakeLists.txt  README.md  area of circle.c  c programmes.c  celcius to farenhite.c  name,email ID,approx age.c  nested loop 2 .c  nested loop.c  print triangle pattern.c  swap 2 numbers.c  swapping numbers using +- operators.c
